--- a/installer.cfg
+++ b/installer.cfg
@@ -1,20 +1,22 @@
 [Options]   	  
+#general options 
 
-default_template=all
+default_template=templ1
 window_width=800
 window_height=600
 charset=UTF-8
-log=%USERPROFILE%\Рабочий стол\simple_installer.log
+log=%temp%\simple_installer.log
 row_height=7
 background_color=lightgreen
 wallpaper=bg.png
 title=Simple application installer
 
 [Template]
+#each template determines selected applications
 
 id=all
 name=All applications
-checked=7zip,adobereader,far,firefox,flashplayer,jre,klite,libreoffice,miranda,spark,thunderbird,totalcommander,visioviewer
+checked=app1,app2,app3,app4
 
 [Template]
 
@@ -23,104 +25,34 @@ name=Nothing
 checked=
 
 [Application]
+#each application should be described with such section
 
-id=7zip
-name=7-zip
-command="%root%\DST\7-zip\7z920.exe" /S
-command=regedit /S "%root%\DST\7-zip\user.reg"
-command="%root%\DST\7-zip\assoc.bat"
-
-[Application]
-
-id=adobereader
-name=Adobe Reader 10
-command="%root%\DST\AdobeReader\AdbeRdr1010_ru_RU.exe" /rs /sPB
-uncheckedif=%root%\conditions\file_exists.js "%programfiles%\Adobe\Reader 10.0\Reader\AcroRd32.exe"
+id=app1
+name=Application 1
+command="%root%\dst\setup.exe" /silent
+requires=app2,app3
+uncheckedif="%root%\conditions\file_exists.js" "%temp%\somefile.txt"
 
 [Application]
 
-id=far
-name=Far manager
-command="%root%\DST\Far\Far20b1807.x86.20110203.msi" /passive /norestart
-
-[Application]
-
-id=firefox
-name=Firefox 9.0
-command="%root%\DST\Firefox\Firefox_9_0.exe" -ms -ira
-
-[Application]
-
-id=flashplayer
-name=Flash player
+id=app2
+conflicts=app4
+name=Application 2
+checkedif="%root%\conditions\file_exists.js" "%temp%\another.txt"
+command="%root%\dst\install.exe"  /unattended
 close_ie=true
-command="%root%\DST\FlashPlayer\install_flash_player_32bit.exe" -install 
-command="%root%\DST\FlashPlayer\install_flash_player_ax_32bit.exe" -install 
+
+[Application]
+
+id=app3
+name=Application 3
+command="%root%\dst\install.msi"
 
 
 [Application]
 
-id=jre
-name=Java (JRE 6.29) 
-command="%root%\DST\JRE\jre-6u29-windows-i586-s.exe" /s
-
-[Application]
-
-id=klite
-name=KLite codec pack
-command="%root%\DST\klite\K-Lite_Codec_Pack_650_Mega.exe" /verysilent /norestart /LoadInf="%root%\DST\klite\klcp_mega_unattended.ini"
-
-[Application]
-
-id=libreoffice
-name=LibreOffice 3.4
-requires=jre
-command="%root%\DST\LibreOffice\LibreOffice_inst\libreoffice34.msi" /qr /norestart
-command="%root%\DST\LibreOffice\LibreOffice_hp\libreoffice34.msi" /qr /norestart
-command=cmd /c xcopy  "%root%\DST\LibreOffice\LibreOffice" "%appdata%\LibreOffice" /i /s /e /r /h /y /z
-command=cmd /c xcopy  "%root%\DST\LibreOffice\LibreOffice" "%defaultuserprofile%\Application Data\LibreOffice" /i /s /e /r /h /y /z 
-
-[Application]
-
-id=miranda
-name=Miranda
-conflicts=spark
-command="%root%\DST\Miranda\miranda-im-v0.9.41-unicode.exe" /S
-command=regedit /s "%root%\DST\Miranda\kerberos.reg"
-command=cmd /c copy "%root%\DST\Miranda\Langpack_russian.txt" "%ProgramFiles%\Miranda IM\"
-command=cmd /c copy "%root%\DST\Miranda\mirandaboot.ini" "%ProgramFiles%\Miranda IM\"
-command=cmd /c copy "%root%\DST\Miranda\autoexec_gts.ini" "%ProgramFiles%\Miranda IM\"
-command="%root%\DST\Miranda\link.js"
+id=app4
+name=Application 4
+command="%root%\dst\setup.bat"
 
 
-[Application]
-
-id=spark
-name=Spark
-requires=jre
-#conflicts=miranda
-command=regedit /s "%root%\DST\Spark\kerberos.reg"
-command="%root%\DST\Spark\spark_2_6_3.exe" -q
-command=cmd /c mkdir "%appdata%\Spark"
-command=cmd /c copy "%root%\DST\Spark\spark.properties" "%appdata%\Spark"
-command=cmd /c mkdir "%defaultuserprofile%\Application Data\Spark"
-command=cmd /c copy "%root%\DST\Spark\spark.properties" "%defaultuserprofile%\Application Data\Spark"
-command="%root%\DST\Spark\link.js"
-
-[Application]
-
-id=thunderbird
-name=Thunderbird 8.0
-command="%root%\DST\Thunderbird\Thunderbird_8_0.exe" -ms -ira
-
-[Application]
-
-id=totalcommander
-name=Total Commander
-command="%root%\DST\TotalCommander\tc_install_adm.exe"
-
-[Application]
-
-id=visioviewer
-name=Visio Viewer
-command="%root%\DST\VisioViewer\visioviewer.exe" /quiet /norestart
