fix: default template is now being applied properly... i think...

--- a/installer.cfg
+++ b/installer.cfg
@@ -1,7 +1,7 @@
 [Options]   	  
 #general options 
 
-default_template=templ1
+default_template=all
 window_width=800
 window_height=600
 charset=UTF-8
